# MediaServer2

./: .gitignore  AGENTS.md  ChatOllama.ipynb  Chroma.ipynb  PDF loading.ipynb  main.py  ollama_chat_test.ipynb  pyproject.toml  soundGen.py  systemPrompt.md
tools/: image.py  pdf.py  video.py  websearching.py
