[project]
name = "mediaserver2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab-vim>=4.1.4",
    "kokoro>=0.9.4",
    "langchain>=1.1.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.6",
    "notebook>=7.5.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pypdf>=6.4.1",
    "soundfile>=0.13.1",
    "streamlit>=1.52.1",
    "youtube-transcript-api>=1.2.3",
]
